--- a/ui/CQRS.BlazorUI/_Imports.razor
+++ b/ui/CQRS.BlazorUI/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using CQRS.BlazorUI
+@using CQRS.BlazorUI.Components
 @using CQRS.BlazorUI.Layout
