Done and remove functionalities with table component for To-do

--- a/ui/CQRS.BlazorUI/Components/Todo/TodoForm.razor
+++ b/ui/CQRS.BlazorUI/Components/Todo/TodoForm.razor
@@ -23,6 +23,7 @@
     {
         if (!string.IsNullOrWhiteSpace(todoItem.Description))
         {
+            todoItem.Id = 0;
             await OnAdd.InvokeAsync(todoItem);
             todoItem = new();
         }
