Rename the Todo view

--- a/ui/CQRS.BlazorUI/Pages/TodoLocalStorage.razor
+++ b/ui/CQRS.BlazorUI/Pages/TodoLocalStorage.razor
@@ -1,4 +1,4 @@
-@page "/todo/local"
+@page "/todo/local-storage"
 @using Blazored.LocalStorage
 @using CQRS.BlazorUI.Components.Todo
 @using CQRS.BlazorUI.Models
