--- a/ui/CQRS.BlazorUI/Layout/NavMenu.razor
+++ b/ui/CQRS.BlazorUI/Layout/NavMenu.razor
@@ -15,12 +15,12 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="todo" Match="NavLinkMatch.All">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> To-Do (In-memory)
+            <NavLink class="nav-link" href="todo/in-memory" Match="NavLinkMatch.All">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> To-Do (In-Memory)
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="todo/local" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="todo/local-storage" Match="NavLinkMatch.All">
                 <span class="bi bi-filter-square-fill-nav-menu" aria-hidden="true"></span> To-Do (Local Storage)
             </NavLink>
         </div>
