Implement the add, remove, and done with database

--- a/ui/CQRS.BlazorUI/Components/Todo/TodoTable.razor
+++ b/ui/CQRS.BlazorUI/Components/Todo/TodoTable.razor
@@ -24,7 +24,7 @@
             }
         </tbody>
     </table>
-    <p>Todo Count: <span>@todoCount</span></p>
+    <p>Pending To-Do Count: <span>@todoCount</span></p>
 }
 
 @code {
