--- a/ui/CQRS.BlazorUI/Layout/NavMenu.razor
+++ b/ui/CQRS.BlazorUI/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-filter-square-fill-nav-menu" aria-hidden="true"></span> To-Do (Local Storage)
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="todo" Match="NavLinkMatch.All">
+                <span class="bi bi-filter-square-fill-nav-menu" aria-hidden="true"></span> To-Do
+            </NavLink>
+        </div>
     </nav>
 </div>
 
